from scene import SofaScene

class Simulation:
    
    def exec(self) -> None:
        scene = SofaScene()
        scene.exec()
        